--- a/ESP_AP/platformio.ini
+++ b/ESP_AP/platformio.ini
@@ -15,3 +15,6 @@ framework = arduino
 monitor_speed = 115200
 lib_deps =
     https://github.com/espressif/arduino-esp32.git
+    paulstoffregen/OneWire@^2.3.7
+	milesburton/DallasTemperature@^3.11.0
+	roboticsbrno/ServoESP32@^1.0.3
